--- a/core/templates/course/subject_course_list.html
+++ b/core/templates/course/subject_course_list.html
@@ -20,7 +20,7 @@ E-Learning Platform
                 <li><a href="#" class="text-gray-600 hover:text-blue-500">Home</a></li>
                 <li><a href="#" class="text-gray-600 hover:text-blue-500">Courses</a></li>
                 <li><a href="#" class="text-gray-600 hover:text-blue-500">Categories</a></li>
-                <li><a href="#" class="text-gray-600 hover:text-blue-500">Contact</a></li>
+                <li><a href="{% url 'accounts:sign_out' %}" class="text-gray-600 hover:text-blue-500">Sign-out</a></li>
             </ul>
         </div>
     </nav>
