--- a/core/templates/accounts/edit_profile.html
+++ b/core/templates/accounts/edit_profile.html
@@ -15,7 +15,7 @@
 <div class="flex justify-center items-center min-h-screen bg-gray-100">
     <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Edit-Profile</h2>
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
           {{form|crispy}}
 
