--- a/core/templates/accounts/view_profile.html
+++ b/core/templates/accounts/view_profile.html
@@ -41,9 +41,10 @@
                       {{profile.bio}}
                     </p>
                     <div class="mt-4">
-                        <a href="{{profile.contact_email}}"
-                            class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition">Contact
-                            Me</a>
+                        <a href="{%  url 'courses:add_course' %}"
+                            class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition">
+                            Add Course
+                            </a>
                     </div>
                 </div>
             </div>
