--- a/core/templates/accounts/view_profile.html
+++ b/core/templates/accounts/view_profile.html
@@ -41,10 +41,17 @@
                       {{profile.bio}}
                     </p>
                     <div class="mt-4">
+                        
+                        {% if perms.courses.can_add_course %}
                         <a href="{%  url 'courses:add_course' %}"
-                            class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition">
-                            Add Course
-                            </a>
+                        class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition">
+                        Add Course
+                        </a>
+                        {% else %}
+                        
+                        {% endif %}
+                            
+                      
                     </div>
                 </div>
             </div>
